teams/_bases/workflows/networkpolicy-workflow-egress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workflow-egress-minio
spec:
  podSelector:
    matchLabels:
      platform.ai-ml/network-role: workflow
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: minio
      podSelector:
        matchLabels:
          app.kubernetes.io/name: minio
    ports:
    - protocol: TCP
      port: 9000
